# hyperspectrus

./: .gitignore  README.md  docker-compose.yaml
desk/: README.md  pyproject.toml
desk/src/: app.db  main.py
desk/src/api/: cloud.py  local.py
desk/src/auth/: login.py
desk/src/core/: config.py  logging.py  processing.py
desk/src/db/: db.py  models.py
desk/src/forms/: main.ui  research.ui
desk/src/services/: device_api.py  firmware.py  state.py  video.py
desk/src/ui/: create_user_widget.py  firmware.py  login_widget.py  main_window.py  research.py  user_profile_dialog.py  video.py
desk/src/ui/patient/: device_dialog.py  device_worker.py  patient_dialog.py  patient_widget.py  session_dialog.py
desk/src/ui/session/: download_worker.py  example.py  process_worker.py  session_widget.py  update_worker.py
desk/src/ui/setting/: chromophore_table.py  device_table.py  matrix_table.py  setting_widget.py  spectrum_dialog.py  spectrum_table.py
desk/src/ui/user/: create_user_widget.py
desk/src/widgets/: camera.py  devices.py  login.py  main.py  patient.py  queue.py  session.py
desk/src/widgets/patients/: main.py  network.py  patient.py  session.py
desk/src/widgets/settings/: chromophore.py  device.py  main.py  matrix.py  spectrum.py
desk/tests/: conftest.py  test_pytest_setup.py
desk/tests/db/: __init__.py  test_db_utils.py  test_models.py
desk/tests/ui/: test_create_user_widget.py  test_login_widget.py  test_user_profile_dialog.py
desk/tests/ui/session/: test_process_worker.py
desktop/: requirements.txt
device/: README.md
web/: .env.example  (+4 more)
(+233 files in other folders)
