[project]
name = "hyperspectrus-desk"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksei Semochkin",email = "aleksioprime@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyqt6 (>=6.9.0,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "numpy (<2.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "matplotlib (<3.10)",
    "scikit-image (<0.22)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
